cabal-version:      3.0

name:               antiope
version:            7.3.0
synopsis:           Please see the README on Github at <https://github.com/arbor/antiope#readme>
description:        Please see the README on Github at <https://github.com/arbor/antiope#readme>.
category:           Services
homepage:           https://github.com/arbor/antiope#readme
bug-reports:        https://github.com/arbor/antiope/issues
author:             Arbor Networks
maintainer:         mayhem@arbor.net
copyright:          Arbor Networks
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md
    contract/file_change_message.avsc
    contract/resource_changed.avsc

source-repository head
  type: git
  location: https://github.com/arbor/antiope

common config
  ghc-options:          -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:     Haskell2010
  default-extensions:   BangPatterns GeneralizedNewtypeDeriving OverloadedStrings TupleSections

common config-test
  ghc-options:          -msse4.2 -threaded -rtsopts -with-rtsopts=-N

common base                   { build-depends: base                   >= 4.7          && < 5        }

common aeson                  { build-depends: aeson                                                }
common aeson-lens             { build-depends: aeson-lens                                           }
common amazonka               { build-depends: amazonka               >= 1.6          && < 1.7      }
common amazonka-athena        { build-depends: amazonka-athena                                      }
common amazonka-core          { build-depends: amazonka-core          >= 1.6          && < 1.7      }
common amazonka-dynamodb      { build-depends: amazonka-dynamodb                                    }
common amazonka-s3            { build-depends: amazonka-s3            >= 1.6          && < 1.7      }
common amazonka-sns           { build-depends: amazonka-sns                                         }
common amazonka-sqs           { build-depends: amazonka-sqs                                         }
common amazonka-swf           { build-depends: amazonka-swf           >= 1.6          && < 1.7      }
common attoparsec             { build-depends: attoparsec                                           }
common avro                   { build-depends: avro                                                 }
common bytestring             { build-depends: bytestring                                           }
common conduit                { build-depends: conduit                                              }
common conduit-extra          { build-depends: conduit-extra                                        }
common exceptions             { build-depends: exceptions                                           }
common generic-lens           { build-depends: generic-lens                                         }
common hedgehog               { build-depends: hedgehog               >= 0.5          && < 0.7      }
common hspec                  { build-depends: hspec                  >= 2.4          && < 2.7      }
common http-client            { build-depends: http-client                                          }
common http-types             { build-depends: http-types                                           }
common hw-hspec-hedgehog      { build-depends: hw-hspec-hedgehog      >= 0.1          && < 0.3      }
common lens                   { build-depends: lens                                                 }
common lens-aeson             { build-depends: lens-aeson                                           }
common monad-loops            { build-depends: monad-loops                                          }
common mtl                    { build-depends: mtl                                                  }
common network-uri            { build-depends: network-uri                                          }
common optparse-applicative   { build-depends: optparse-applicative   >= 0.14.3.0     && < 0.15     }
common resourcet              { build-depends: resourcet                                            }
common scientific             { build-depends: scientific                                           }
common split                  { build-depends: split                                                }
common text                   { build-depends: text                                                 }
common time                   { build-depends: time                                                 }
common transformers           { build-depends: transformers                                         }
common unliftio-core          { build-depends: unliftio-core                                        }
common unordered-containers   { build-depends: unordered-containers                                 }

common antiope-athena                 { build-depends: antiope-athena                 }
common antiope-contract               { build-depends: antiope-contract               }
common antiope-core                   { build-depends: antiope-core                   }
common antiope-dynamodb               { build-depends: antiope-dynamodb               }
common antiope-messages               { build-depends: antiope-messages               }
common antiope-optparse-applicative   { build-depends: antiope-optparse-applicative   }
common antiope-s3                     { build-depends: antiope-s3                     }
common antiope-sns                    { build-depends: antiope-sns                    }
common antiope-sqs                    { build-depends: antiope-sqs                    }
common antiope-swf                    { build-depends: antiope-swf                    }

library antiope-athena
  import:               base, config
                      , amazonka
                      , amazonka-athena
                      , amazonka-core
                      , lens
                      , resourcet
                      , text
                      , unliftio-core
  visibility:           public
  exposed-modules:      Antiope.Athena
  hs-source-dirs:       antiope-athena/src

test-suite antiope-athena-test
  import:               base, config, config-test
                      , amazonka
                      , amazonka-athena
                      , amazonka-core
                      , antiope-athena
                      , lens
                      , resourcet
                      , text
                      , unliftio-core
  hs-source-dirs:       antiope-athena/test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs

library antiope-contract
  import:               base, config
                      , aeson
                      , avro
                      , bytestring
                      , text
  visibility:           public
  exposed-modules:      Antiope.Contract.SQS.FileChangeMessage
                        Antiope.Contract.SQS.ResourceChanged
  hs-source-dirs:       antiope-contract/src
  build-depends:        antiope-s3

library antiope-core
  import:               base, config
                      , aeson
                      , amazonka
                      , amazonka-core
                      , bytestring
                      , exceptions
                      , generic-lens
                      , http-client
                      , http-types
                      , lens
                      , mtl
                      , resourcet
                      , text
                      , transformers
                      , unliftio-core
  visibility:           public
  hs-source-dirs:       antiope-core/src
  exposed-modules:
      Antiope.Core
      Antiope.Core.Error
      Antiope.Core.Internal.Show
      Antiope.Env
      Antiope.Orphans

test-suite antiope-core-test
  import:               base, config, config-test
                      , aeson
                      , aeson-lens
                      , amazonka
                      , amazonka-core
                      , bytestring
                      , exceptions
                      , generic-lens
                      , hedgehog
                      , hspec
                      , http-client
                      , http-types
                      , hw-hspec-hedgehog
                      , lens
                      , mtl
                      , resourcet
                      , scientific
                      , text
                      , transformers
                      , unliftio-core
  hs-source-dirs:       antiope-core/test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  build-depends:        antiope-core

library antiope-dynamodb
  import:               base, config
                      , aeson
                      , amazonka
                      , amazonka-core
                      , amazonka-dynamodb
                      , antiope-core
                      , generic-lens
                      , lens
                      , text
                      , unliftio-core
                      , unordered-containers
  visibility:           public
  exposed-modules:      Antiope.DynamoDB
                        Antiope.DynamoDB.Types
  hs-source-dirs:       antiope-dynamodb/src

test-suite antiope-dynamodb-test
  import:               base, config, config-test
                      , amazonka
                      , amazonka-core
                      , amazonka-dynamodb
                      , antiope-core
                      , antiope-dynamodb
                      , generic-lens
                      , lens
                      , text
                      , unliftio-core
                      , unordered-containers
  hs-source-dirs:       antiope-dynamodb/test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs

library antiope-messages
  import:               base, config
                      , aeson
                      , amazonka
                      , amazonka-core
                      , bytestring
                      , generic-lens
                      , lens
                      , lens-aeson
                      , monad-loops
                      , network-uri
                      , text
                      , unliftio-core
  visibility:           public
  exposed-modules:      Antiope.Messages
                        Antiope.Messages.Types
                        Antiope.Messages.Via
  hs-source-dirs:       antiope-messages/src

test-suite antiope-messages-test
  import:               base, config, config-test
                      , aeson
                      , amazonka
                      , amazonka-core
                      , antiope-messages
                      , bytestring
                      , generic-lens
                      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
                      , lens
                      , lens-aeson
                      , monad-loops
                      , network-uri
                      , scientific
                      , text
                      , unliftio-core
  hs-source-dirs:       antiope-messages/test
  other-modules:        Antiope.Messages.MessagesSpec
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs

library antiope-optparse-applicative
  import:               base, config
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , optparse-applicative
                      , text
  visibility:           public
  hs-source-dirs:       antiope-optparse-applicative/src
  exposed-modules:      Antiope.Options.Applicative

test-suite antiope-optparse-applicative-test
  import:               base, config, config-test
                      , aeson
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , antiope-optparse-applicative
                      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
  hs-source-dirs:       antiope-optparse-applicative/test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs

library antiope-s3
  import:               base, config
                      , aeson
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , antiope-core
                      , antiope-messages
                      , attoparsec
                      , bytestring
                      , conduit
                      , conduit-extra
                      , exceptions
                      , generic-lens
                      , http-types
                      , lens
                      , mtl
                      , network-uri
                      , resourcet
                      , text
                      , time
                      , unliftio-core
  visibility:           public
  exposed-modules:      Antiope.S3
                        Antiope.S3.GetObject
                        Antiope.S3.Internal
                        Antiope.S3.Lazy
                        Antiope.S3.Messages
                        Antiope.S3.Range
                        Antiope.S3.Request
                        Antiope.S3.Strict
                        Antiope.S3.Syntax
                        Antiope.S3.Types
  hs-source-dirs:       antiope-s3/src

test-suite antiope-s3-test
  import:               base, config, config-test
                      , aeson
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , antiope-core
                      , antiope-s3
                      , attoparsec
                      , bytestring
                      , conduit
                      , conduit-extra
                      , exceptions
                      , generic-lens
                      , hedgehog
                      , hspec
                      , http-types
                      , hw-hspec-hedgehog
                      , lens
                      , mtl
                      , network-uri
                      , resourcet
                      , text
                      , time
                      , unliftio-core
  other-modules:        Antiope.S3.MessagesSpec
                        Antiope.S3.TypesSpec
                        Antiope.S3Spec
  hs-source-dirs:       antiope-s3/test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs

library antiope-sns
  import:               base, config
                      , aeson
                      , amazonka
                      , amazonka-core
                      , amazonka-sns
                      , bytestring
                      , generic-lens
                      , lens
                      , text
                      , time
                      , unliftio-core
  visibility:           public
  exposed-modules:      Antiope.SNS
                        Antiope.SNS.Messages
                        Antiope.SNS.Types
  hs-source-dirs:       antiope-sns/src

test-suite antiope-sns-test
  import:               base, config, config-test
                      , aeson
                      , amazonka
                      , amazonka-core
                      , amazonka-sns
                      , antiope-sns
                      , bytestring
                      , generic-lens
                      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
                      , lens
                      , text
                      , time
                      , unliftio-core
  other-modules:        Antiope.SNS.MessagesSpec
  hs-source-dirs:       antiope-sns/test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs

library antiope-sqs
  import:               base, config
                      , aeson
                      , amazonka
                      , amazonka-core
                      , amazonka-sqs
                      , bytestring
                      , conduit
                      , generic-lens
                      , lens
                      , lens-aeson
                      , monad-loops
                      , mtl
                      , network-uri
                      , split
                      , text
                      , unliftio-core
                      , unordered-containers
  visibility:           public
  hs-source-dirs:       antiope-sqs/src
  exposed-modules:      Antiope.SQS
                        Antiope.SQS.Messages
                        Antiope.SQS.Types

test-suite antiope-sqs-test
  import:               base, config, config-test
                      , aeson
                      , amazonka
                      , amazonka-core
                      , amazonka-sqs
                      , antiope-sqs
                      , bytestring
                      , conduit
                      , generic-lens
                      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
                      , lens
                      , lens-aeson
                      , monad-loops
                      , mtl
                      , network-uri
                      , text
                      , time
                      , unliftio-core
  hs-source-dirs:       antiope-sqs/test
  other-modules:        Antiope.SQS.MessagesSpec
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs

library antiope-swf
  import:               base, config
                      , amazonka-swf
                      , lens
                      , text
  visibility:           public
  exposed-modules:      Antiope.SWF.HistoryEvent
  hs-source-dirs:       antiope-swf/src

test-suite antiope-swf-test
  import:               base, config, config-test
                      , antiope-swf
                      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
  hs-source-dirs:       antiope-swf/test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
