cabal-version: 1.12

name:           antiope-contract
version:        6.4.0
description:    Please see the README on Github at <https://github.com/arbor/antiope#readme>
category:       Services
homepage:       https://github.com/packetloop/antiope-contract#readme
author:         Arbor Networks
maintainer:     mayhem@arbor.net
copyright:      Arbor Networks
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    contract/file_change_message.avsc
    contract/resource_changed.avsc
    README.md

library
  exposed-modules:
      Antiope.Contract.SQS.FileChangeMessage
      Antiope.Contract.SQS.ResourceChanged
  other-modules:
      Paths_antiope_contract
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson
    , antiope-s3
    , avro
    , base >=4.7 && <5
    , bytestring
    , text
  if os(osx)
    cpp-options: -D__attribute__(A)= -D_Nullable= -D_Nonnull=
  default-language: Haskell2010
