cabal-version: 2.2

name:           antiope-messages
version:        6.4.0
synopsis:       Please see the README on Github at <https://github.com/arbor/antiope#readme>
description:    Please see the README on Github at <https://github.com/arbor/antiope#readme>.
category:       Services
homepage:       https://github.com/arbor/antiope#readme
bug-reports:    https://github.com/arbor/antiope/issues
author:         Arbor Networks
maintainer:     mayhem@arbor.net
copyright:      Arbor Networks
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/arbor/antiope

library
  exposed-modules:
      Antiope.Messages
      Antiope.Messages.Types
  hs-source-dirs: src
  default-extensions: BangPatterns GeneralizedNewtypeDeriving OverloadedStrings TupleSections
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -msse4.2
  build-depends:
      aeson
    , amazonka
    , amazonka-core
    , amazonka-s3
    , amazonka-sqs
    , antiope-s3
    , base >=4.7 && <5
    , generic-lens
    , lens
    , lens-aeson
    , monad-loops
    , network-uri
    , text
    , unliftio-core
  default-language: Haskell2010

test-suite antiope-messages-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  default-extensions: BangPatterns GeneralizedNewtypeDeriving OverloadedStrings TupleSections
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -msse4.2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , amazonka
    , amazonka-core
    , amazonka-s3
    , amazonka-sqs
    , antiope-messages
    , antiope-s3
    , base >=4.7 && <5
    , generic-lens
    , lens
    , lens-aeson
    , monad-loops
    , network-uri
    , text
    , unliftio-core
  default-language: Haskell2010
